# simd-bp128-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  USAGE.md  d  run_fuzz.sh
.github/workflows/: ci.yml
benches/: block_level.rs  compression.rs  mixed_data.rs  throughput.rs  throughput_comparison.rs
examples/: Cargo.toml
examples/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compress_only.rs  decompress_only.rs  roundtrip.rs
src/: bitwidth.rs  compress.rs  decompress.rs  dispatch.rs  error.rs  lib.rs
src/simd/: avx2.rs  avx512.rs  mod.rs  scalar.rs  sse.rs
tests/: correctness.proptest-regressions  correctness.rs  edge_cases.rs
